# steam-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: principal-python-ml-engineer.md  steam-api-expert.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml  tests.yml
src/steam_mcp/: __init__.py  server.py
src/steam_mcp/client/: __init__.py  cache.py  steam_client.py
src/steam_mcp/endpoints/: __init__.py  base.py  cloud_saves.py  family_groups.py  game_servers.py  player_service.py  steam_apps.py  steam_guides.py  steam_news.py  steam_trading.py  steam_user.py  steam_wishlist.py  steam_workshop.py  user_stats.py
src/steam_mcp/utils/: __init__.py  steam_id.py
tests/: __init__.py  test_cache.py  test_cloud_saves.py  test_endpoint_registry.py  test_family_groups.py  test_game_servers.py  test_global_rate_limiter.py  test_player_service.py  test_steam_apps.py  test_steam_client_cache.py  test_steam_guides.py  test_steam_id.py  test_steam_news.py  test_steam_trading.py  test_steam_user.py  test_steam_wishlist.py  test_steam_workshop.py  test_user_stats.py
