[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam-mcp"
version = "0.5.0"
description = "Steam API integration via Model Context Protocol (MCP)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Steam MCP Contributors" }
]
keywords = ["steam", "mcp", "api", "model-context-protocol", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
steam-mcp = "steam_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/steam-mcp"
Documentation = "https://github.com/yourusername/steam-mcp#readme"
Repository = "https://github.com/yourusername/steam-mcp"
Issues = "https://github.com/yourusername/steam-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/steam_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/steam_mcp --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict=
    "ARG001", # unused function argument
]

[tool.ruff.lint.isort]
known-first-party = ["steam_mcp"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["mcp.*", "httpx.*"]
ignore_missing_imports = true
